--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Note\n",
-    "* Instructions have been included for each segment. You do not have to follow them exactly, but they are included to help you think through the steps."
+    "## Author: Saloni Gupta\n",
+    "Date: 22/10/2020\n",
+    "Heroes Of Pymoli Data Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,6 +205,7 @@
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
     "purchase_data = pd.read_csv(file_to_load, encoding='utf-8')\n",
+    "#with pd.option_context('display.colheader_justify','left'):\n",
     "purchase_data"
    ]
   },
@@ -1262,9 +1264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1367,7 +1369,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,9 +1398,22 @@
     "most_popular_items[\"Total Purchase Value\"]  = most_popular_items[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
     "most_popular_items[\"Average Purchase Price\"] = most_popular_items[\"Average Purchase Price\"].map(\"${:.2f}\".format)\n",
     "\n",
-    "\n",
+    "dfStyler = most_popular_items.style.set_properties({'text-align': 'left'})\n",
     "# display the Most Popular Items summary table \n",
     "most_popular_items.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions:-\n",
+    "1) Of the 780 players list, there are 576 unique players, the vast majority are male (84%) and smaller proportion of female players (14%).\n",
+    "2) Our peak age demographic falls between 20-24 (44.8%) with secondary groups falling between 15-19 (18.6%) and 25-29 (13%).\n",
+    "3) The majority of purchases are also done by the age group 20-24 with total purchase value of USD 1114 although maximum purchase of 5 items is done by Lisosia93 who falls in age group 25-29.\n",
+    "4) Out of 183 items on purchase list, the item  Final Critic is the most profitable as well as the most popular item with total purchase value USD 59.99 having sold max 13 items, followed by Oathbreaker, Last Hope of the Breaking Storm with total purchase value USD 50.76 ,selling 12 items.\n",
+    "5) Since the participating players were predominantly male 484 compared to 81 females, the majority of purchases are done by Male with no significant difference in the total item purchased by male(652/484) vs total item purchased by female(113/81)."
    ]
   },
   {
