--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Author: Saloni Gupta\n",
-    "Date: 22/10/2020\n",
+    "## Author: Saloni Gupta </br>\n",
+    "Date: 22/10/2020 </br>\n",
     "Heroes Of Pymoli Data Analysis"
    ]
   },
@@ -1409,10 +1409,10 @@
    "metadata": {},
    "source": [
     "### Conclusions:-\n",
-    "1) Of the 780 players list, there are 576 unique players, the vast majority are male (84%) and smaller proportion of female players (14%).\n",
-    "2) Our peak age demographic falls between 20-24 (44.8%) with secondary groups falling between 15-19 (18.6%) and 25-29 (13%).\n",
-    "3) The majority of purchases are also done by the age group 20-24 with total purchase value of USD 1114 although maximum purchase of 5 items is done by Lisosia93 who falls in age group 25-29.\n",
-    "4) Out of 183 items on purchase list, the item  Final Critic is the most profitable as well as the most popular item with total purchase value USD 59.99 having sold max 13 items, followed by Oathbreaker, Last Hope of the Breaking Storm with total purchase value USD 50.76 ,selling 12 items.\n",
+    "1) Of the 780 players list, there are 576 unique players, the vast majority are male (84%) and smaller proportion of female players (14%).</br>\n",
+    "2) Our peak age demographic falls between 20-24 (44.8%) with secondary groups falling between 15-19 (18.6%) and 25-29 (13%).</br>\n",
+    "3) The majority of purchases are also done by the age group 20-24 with total purchase value of USD 1114 although maximum purchase of 5 items is done by Lisosia93 who falls in age group 25-29. </br>\n",
+    "4) Out of 183 items on purchase list, the item  Final Critic is the most profitable as well as the most popular item with total purchase value USD 59.99 having sold max 13 items, followed by Oathbreaker, Last Hope of the Breaking Storm with total purchase value USD 50.76 ,selling 12 items. </br>\n",
     "5) Since the participating players were predominantly male 484 compared to 81 females, the majority of purchases are done by Male with no significant difference in the total item purchased by male(652/484) vs total item purchased by female(113/81)."
    ]
   },
