--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -1298,7 +1298,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1327,7 @@
     "most_popular_items[\"Total Purchase Value\"]  = most_popular_items[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
     "most_popular_items[\"Average Purchase Price\"] = most_popular_items[\"Average Purchase Price\"].map(\"${:.2f}\".format)\n",
     "\n",
-    "#dfStyler = most_popular_items.style.set_properties({'text-align': 'left'})\n",
+    "#dfStyler = most_popular_items.style.set_properties(**{'text-align': 'left'})\n",
     "# display the Most Popular Items summary table \n",
     "most_popular_items.head()"
    ]
